now able to alter labels